--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "libft"]
-	path = libft
+	path = libs/libft
 	url = https://github.com/sudo-spivak/libft.git
 [submodule "minilibx-linux"]
-	path = minilibx-linux
+	path = libs/minilibx-linux
 	url = https://github.com/42Paris/minilibx-linux.git
